tests/error/type_errors/or_not_bool_left.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo(x: bool) -> bool:
6:        return "xx" or x
                 ^^^^
GuppyTypeError: Expected expression of type `bool`, but got `'xx'` of type `str`
